feat(files): add get file endpoint
